added parameters to passenger class
